objects/Notification_Event__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Notification Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NE-{00000000}</displayFormat>
        <label>Notification Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>